tests/ui/traits/next-solver/cycles/double-cycle-inductive-coinductive.stderr
error[E0275]: overflow evaluating the requirement `(): Trait`
  --> $DIR/double-cycle-inductive-coinductive.rs:32:19
   |
LL |     impls_trait::<()>();
   |                   ^^
   |
note: required by a bound in `impls_trait`
  --> $DIR/double-cycle-inductive-coinductive.rs:17:19
   |
LL | fn impls_trait<T: Trait>() {}
   |                   ^^^^^ required by this bound in `impls_trait`

error[E0275]: overflow evaluating the requirement `(): TraitRev`
  --> $DIR/double-cycle-inductive-coinductive.rs:35:23
   |
LL |     impls_trait_rev::<()>();
   |                       ^^
   |
note: required by a bound in `impls_trait_rev`
  --> $DIR/double-cycle-inductive-coinductive.rs:29:23
   |
LL | fn impls_trait_rev<T: TraitRev>() {}
   |                       ^^^^^^^^ required by this bound in `impls_trait_rev`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0275`.
